--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -38,7 +38,7 @@ layout: default
     <div class="clearfix">{{ content }}</div>
 
     {% if page.profile.more_info %}
-      <div class="more-info" style="clear: both; margin-top: 1rem;">{{ page.profile.more_info }}</div>
+      <div class="more-info" style="margin-top: 1rem;">{{ page.profile.more_info }}</div>
     {% endif %}
 
     <!-- Divider after intro -->
