--- a/_includes/cv/interests.liquid
+++ b/_includes/cv/interests.liquid
@@ -1,23 +1,30 @@
 {% comment %}
-  Unified interests entry renderer for both formats
+  Unified interests entry renderer for both formats - Two column grid layout
 {% endcomment %}
 
-<div class="card-text font-weight-light">
+<div class="row">
   {% for entry in entries %}
-    <div class="interest-item">
-      {% if entry.icon %}
-        <i class="{{ entry.icon }}"></i>
-      {% endif %}
-      <strong>{{ entry.name }}:</strong>
-      {% if entry.keywords %}
-        {% for keyword in entry.keywords %}
-          {% if forloop.last %}
-            {{ keyword }}
-          {% else %}
-            {{ keyword }},
-          {% endif %}
-        {% endfor %}
-      {% endif %}
+    <div class="col-md-6">
+      <div class="interest-item">
+        {% if entry.icon %}
+          <i class="{{ entry.icon }}"></i>
+        {% endif %}
+        <strong class="interest-title">{{ entry.name }}</strong>
+        {% if entry.keywords %}
+          <ul class="interest-keywords">
+            {% assign keywords_array = entry.keywords | split: ", " %}
+            {% if keywords_array.size > 1 %}
+              {% for keyword in keywords_array %}
+                <li>{{ keyword }}</li>
+              {% endfor %}
+            {% else %}
+              {% for keyword in entry.keywords %}
+                <li>{{ keyword }}</li>
+              {% endfor %}
+            {% endif %}
+          </ul>
+        {% endif %}
+      </div>
     </div>
   {% endfor %}
 </div>
@@ -25,5 +32,18 @@
 <style>
   .interest-item {
     padding: 0.5rem 0;
+  }
+  .interest-title {
+    color: var(--global-theme-color);
+    display: block;
+    margin-bottom: 0.25rem;
+  }
+  .interest-keywords {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+  }
+  .interest-keywords li {
+    padding: 0.1rem 0;
   }
 </style>
